--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>List Tempat Wisata di Kalimantan Timur</title>
     <link rel="stylesheet" href="style.css">
 
+
 </head>
 <body>
 
@@ -30,7 +31,7 @@
     dan kekayaan tradisi menjadikan perjalanan ke Kalimantan Timur penuh warna. 
     Jelajahi destinasi wisata unik, nikmati kuliner khas, dan rasakan petualangan seru di Bumi Etam.</p>
 
-            <article>
+            <article class = "card">
                 <h3>Pulau Derawan</h3>
                 <a href="https://id.wikipedia.org/wiki/Kepulauan_Derawan" target="_blank">
                     <img src="pulau derawan.png" alt="Pulau Derawan" width="400">
@@ -40,7 +41,7 @@
                 </a>
             </article>
 
-            <article>
+            <article class = "card">
                 <h3>Danau Labuan Cermin</h3>
                 <a href="https://id.wikipedia.org/wiki/Danau_Labuan_Cermin" target="_blank">
                     <img src="laboan cermin.png" alt="Danau Labuan Cermin" width="400">
@@ -50,7 +51,7 @@
                 </a>
             </article>
 
-            <article>
+            <article class = "card">
                 <h3>Bukit Bangkirai</h3>
                 <a href="https://id.wikipedia.org/wiki/Bukit_Bangkirai" target="_blank">
                     <img src="bukit bangkirai.png" alt="Bukit Bangkirai" width="400">
@@ -79,6 +80,8 @@
         <p>&copy; 2025 Wisata Kalimantan Timur</p>
         <p>Referensi desain: <a href="https://www.indonesia.travel/" target="_blank">Indonesia Travel</a></p>
     </footer>
+
+    <script src="script.js"></script>
 
 </body>
 </html>
